# pulse-estimation

./: .gitattributes  .gitignore  pyproject.toml
resources/video/my/: face_controlled_diffused.mov  face_controlled_not_diffused.mov
src/pulse_estimation/: cli.py
src/pulse_estimation/approach/: __init__.py  fir_filtered_hsv_ica.py  fir_filtered_ica.py  fir_filtered_pca.py  fir_filtered_rg_ica.py  fir_filtered_rg_pca.py  naive_ica.py  naive_ica_filter_channel.py  naive_pca.py
src/pulse_estimation/core/: __init__.py  extract_face_frames.py  get_mean_skin_pixel_values.py  threshold_pixel_values.py
src/pulse_estimation/core/exceptions/: __init__.py  no_face_detected.py
src/pulse_estimation/settings/: __init__.py
src/pulse_estimation/settings/base/: __init__.py  base_settings.py
src/pulse_estimation/utils/: __init__.py
src/pulse_estimation/utils/files/: __init__.py
src/pulse_estimation/utils/signal/: __init__.py  butter_bandpass_filter.py  fir_bandpass_filter.py
src/pulse_estimation/utils/video/: __init__.py
src/pulse_estimation/utils/video/exceptions/: __init__.py  closed_video_source.py  not_a_video_file.py  video_capture_closed.py
src/pulse_estimation/utils/video/source/: __init__.py  camera_video_source.py  file_video_source.py
src/pulse_estimation/utils/video/source/base/: __init__.py  base_video_source.py
tests/: test_pulse_estimation.py
