[tool.poetry]
name = "pulse-estimation"
version = "0.1.0"
description = ""
authors = ["Krzysztof Piekarczyk <krzysztof@piekarczyk.eu>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
scipy = "^1.9.0"
opencv-python = "^4.6.0"
toml = "^0.10.2"
scikit-learn = "^1.1.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_configs = true
follow_imports = "silent"
plugins = "numpy.typing.mypy_plugin"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.poetry.scripts]
gauntlet = "src.pulse_estimation.cli:gauntlet"
single = "src.pulse_estimation.cli:single"